<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        android:background="@android:color/background_light"
        tools:context=".ConverterFragment">

        <TextView
            android:id="@+id/enterData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/enter_age"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/ageYears"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/years"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ageMonths"
            app:layout_constraintTop_toBottomOf="@id/enterData" />

        <EditText
            android:id="@+id/ageMonths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/months"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/ageYears"
            app:layout_constraintEnd_toStartOf="@id/ageWeeks"
            app:layout_constraintTop_toBottomOf="@id/enterData" />

        <EditText
            android:id="@+id/ageWeeks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/weeks"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/ageMonths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterData" />

        <TextView
            android:id="@+id/resultTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="20dp"
            android:text="@string/result_age"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/result"
            app:layout_constraintTop_toBottomOf="@id/ageYears"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/resultTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ageYears"/>

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="convertClick"
            android:background="@android:color/background_light"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/convert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
