<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".DietFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/listView"
        android:weightSum="100"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/header">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_weight="30"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/parts"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/comments"
            android:layout_weight="35"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0dp" />

</android.support.constraint.ConstraintLayout>
